# sudoku

./: pyproject.toml
src/sudoku/: __main__.py  brute_force.py  constraint.py  dlx.py  simulated_annealing.py
